2010-04-17 Harri Pitkänen <hatapitk@iki.fi>
	* Run basic tests on "make check".
	* Add function voikkoListSupportedLanguages for listing languages that
	  are supported in spell checking.

2010-04-06 Flammie Pirinen <flammie@iki.fi>
	* Updated HFST integration including suggestion generator
	  and hyphenator.

2010-04-04 Harri Pitkänen <hatapitk@iki.fi>
	* Add multi thread mode to voikkospell.

2010-03-29 Harri Pitkänen <hatapitk@iki.fi>
	* Do not include config.h unless HAVE_CONFIG_H is defined.

2010-03-28 Andris Pavenis <andris.pavenis@iki.fi>
	* Add MSVC solution file.
	* Add MSVC projects for voikkospell, voikkohyphenate, voikkogc 
	* Update libvoikko MSVC project including rearranging sources for easier maintenance.

2010-03-27 Harri Pitkänen <hatapitk@iki.fi>
	* Complete API refactoring. Introduce thread safe API and implement a
	  a compatibility layer that supports the old API.
	* Change the Python module to use new API. Remove libvoikko.init().

2010-03-21 Andris Pavenis <andris.pavenis@iki.fi>
	* Stop using degree sign in source. Fixes serious problems
	  with MSVC 2005.

2010-03-06 Harri Pitkänen <hatapitk@iki.fi>
	* Implement FixedResultSpeller.
	* VOIKKO_OPT_IGNORE_NUMBERS now only affects spell checking.
	  Previously it affected spelling suggestions too, but this behaviour made
	  it difficult independently implement spell checkings and spelling suggestions.
	* Move VOIKKO_OPT_ENCODING, VOIKKO_INTERSECT_COMPOUND_LEVEL and
	  voikko_set_string_option to voikko_deprecated.h, ignore them in the library.
	* Remove all iconv related code, use platform independent UTF-8 conversion.

2010-03-05 Harri Pitkänen <hatapitk@iki.fi>
	* Complete the refactoring of suggestion generator code.

2010-03-04 Harri Pitkänen <hatapitk@iki.fi>
	* Allow specifying suggestion generator backend in the configuration file.
	* Implement NullAnalyzer and SuggestionGeneratorNull.

2010-03-01 Harri Pitkänen <hatapitk@iki.fi>
	* Recognize more Unicode characters as letters.
